[metadata]
name = image-pdf-tools
version = 0.1
description = Convert an image to pdf tools.
long_description = file: README.rst
url = https://github.com/hadpro24
author = Harouna Diallo
author_email = dev.harouna@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find: